--- a/WindowsFormsEFEscuela/WindowsFormsEFEscuela.csproj
+++ b/WindowsFormsEFEscuela/WindowsFormsEFEscuela.csproj
@@ -5,10 +5,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{DFF0A838-40DD-4D75-827F-F0FF19ACE04C}</ProjectGuid>
+    <ProjectGuid>{FC308BDF-4233-4E22-9D1E-5677CDB4D78D}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>WindowsEFEscuela</RootNamespace>
-    <AssemblyName>WindowsEFEscuela</AssemblyName>
+    <RootNamespace>WindowsFormsEFEscuela</RootNamespace>
+    <AssemblyName>WindowsFormsEFEscuela</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -56,55 +56,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Dac\AbmAlumno.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\202301162028545_initial.cs" />
-    <Compile Include="Migrations\202301162028545_initial.designer.cs">
-      <DependentUpon>202301162028545_initial.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202301162051580_cambio.cs" />
-    <Compile Include="Migrations\202301162051580_cambio.designer.cs">
-      <DependentUpon>202301162051580_cambio.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202301171541111_cambio1.cs" />
-    <Compile Include="Migrations\202301171541111_cambio1.designer.cs">
-      <DependentUpon>202301171541111_cambio1.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202301171545315_cambiofinal.cs" />
-    <Compile Include="Migrations\202301171545315_cambiofinal.designer.cs">
-      <DependentUpon>202301171545315_cambiofinal.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202301171936315_nuevamig.cs" />
-    <Compile Include="Migrations\202301171936315_nuevamig.designer.cs">
-      <DependentUpon>202301171936315_nuevamig.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\Configuration.cs" />
-    <Compile Include="Models\Alumno.cs" />
-    <Compile Include="Models\Aula.cs" />
-    <Compile Include="Models\DBEscuelaEFContext.cs" />
-    <Compile Include="Models\Materia.cs" />
-    <Compile Include="Models\Profesor.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Migrations\202301162028545_initial.resx">
-      <DependentUpon>202301162028545_initial.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202301162051580_cambio.resx">
-      <DependentUpon>202301162051580_cambio.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202301171541111_cambio1.resx">
-      <DependentUpon>202301171541111_cambio1.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202301171545315_cambiofinal.resx">
-      <DependentUpon>202301171545315_cambiofinal.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202301171936315_nuevamig.resx">
-      <DependentUpon>202301171936315_nuevamig.cs</DependentUpon>
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -128,6 +89,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\WindowsEFEscuela\WindowsEFEscuela.csproj">
+      <Project>{dff0a838-40dd-4d75-827f-f0ff19ace04c}</Project>
+      <Name>WindowsEFEscuela</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
